--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
@@ -39,10 +40,12 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-native-webview": "^11.22.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/axios": "^0.14.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "babel-plugin-module-resolver": "^4.1.0",
