--- a/package.json
+++ b/package.json
@@ -35,24 +35,29 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-htmlview": "^0.16.0",
     "react-native-paper": "^5.0.0-rc.3",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
-    "react-native-webview": "^11.22.7"
+    "react-native-webview": "11.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/axios": "^0.14.0",
-    "@types/react": "~17.0.21",
+    "@types/react": "17.0.21",
     "@types/react-native": "~0.66.13",
+    "@types/react-native-htmlview": "^0.16.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "~17.0.21"
   },
   "private": true
 }
